# mozjs-shell

./: .project  Cargo.toml
src/: main.rs
