[package]
name = "rust-mozjs-shell"
version = "0.0.1"
authors = ["Till Schneidereit <till@tillschneidereit.net>"]

[dependencies.js]
git = "https://github.com/tschneidereit/rust-mozjs"
rev = "9dbe805b9f963b59159a2347a13d1824835f47f0"

[features]
debugmozjs = ['js/debugmozjs']

[dependencies]
libc = "0.1"
argparse = "0.2"
linenoise = "*"