[package]
name = "rust-mozjs-shell"
version = "0.0.1"
authors = ["Till Schneidereit <till@tillschneidereit.net>"]

[dependencies.js]
git = "https://github.com/servo/rust-mozjs"

[features]
debugmozjs = ['js/debugmozjs']

[dependencies]
libc = "0.1"
argparse = "0.2"
linenoise = {git = "https://github.com/cmr/linenoise-rs"}
